<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingTop="20dp"
    android:paddingRight="40dp"
    android:paddingBottom="20dp"
    tools:context="src.view.Register">

    <TextView
        android:id="@+id/SignUp"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:paddingTop="17sp"
        android:text="@string/signup"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp" />

    <com.anton46.stepsview.StepsView
        android:id="@+id/Pasos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SignUp"
        android:layout_alignStart="@+id/SignUp" />

    <EditText
        android:id="@+id/cedula"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Pasos"
        android:layout_alignParentStart="true"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cedula"
        android:inputType="text"
        android:paddingTop="27sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/Direccion"
        android:layout_width="342dp"
        android:layout_height="55dp"
        android:layout_below="@id/cedula"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="text" />

    <EditText
        android:id="@+id/radio"
        android:layout_width="342dp"
        android:layout_height="55dp"
        android:layout_below="@id/cedula"
        android:layout_marginTop="62dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/radio"
        android:inputType="number" />

    <EditText
        android:id="@+id/precio"
        android:layout_width="342dp"
        android:layout_height="62dp"
        android:layout_below="@id/radio"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/precio"
        android:inputType="number" />

    <Button
        android:id="@+id/finalizar"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_below="@id/precio"
        android:text="@string/finalizar" />
    <Button
        android:id="@+id/volver"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_below="@id/finalizar"
        android:text="@string/volver" />


</RelativeLayout>
