<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingTop="20dp"
    android:paddingRight="40dp"
    android:paddingBottom="20dp"
    tools:context="src.view.Register">

    <TextView
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:paddingTop="17sp"
        android:text="@string/signup"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp" />

    <com.anton46.stepsview.StepsView
        android:id="@+id/Pasos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SignUp"
        android:layout_alignStart="@+id/SignUp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Pasos"
        android:layout_alignParentStart="true"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingTop="27sp"
        android:visibility="visible"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="342dp"
        android:layout_height="55dp"
        android:layout_below="@id/editTextTextEmailAddress"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="342dp"
        android:layout_height="55dp"
        android:layout_below="@id/editTextTextEmailAddress"
        android:layout_marginTop="62dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="342dp"
        android:layout_height="62dp"
        android:layout_below="@id/editTextTextPassword2"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonSolicitar"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_below="@id/editTextTextPersonName2"
        android:text="@string/quiero_solicitar_servicios" />

    <Button
        android:id="@+id/buttonPrestar"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_below="@id/buttonSolicitar"
        android:text="@string/quiero_prestar_servicios" />

</RelativeLayout>
